# web-app/src/types.ts
@@ -1,0 +1,14 @@
+export interface Track {
+  _id: string;
+  title: string;
+  authorId: {
+    username: string;
+    profilePicture: string;
+  };
+  priceEnergy: number;
+  duration: number;
+  minioObjectKey: string;
+  previewObjectKey?: string;
+  createdAt: string;
+  isPublic: boolean;
+}
